# viskex

./: .gitignore  LICENSE  README.md  git_diff_unique.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_against_releases.yml  ci_unversioned_only.yml  image_cache.yml  pypi.yml  release.yml
docs/: api.rst  conf.py  index.rst
tests/notebooks/: common_dolfinx.py  common_firedrake.py  conftest.py  test_plot_boundaries_1d_dolfinx.ipynb  test_plot_boundaries_1d_firedrake.ipynb  test_plot_boundaries_2d_dolfinx.ipynb  test_plot_boundaries_2d_firedrake.ipynb  test_plot_boundaries_3d_dolfinx.ipynb  test_plot_boundaries_3d_firedrake.ipynb  test_plot_mesh_1d_dolfinx.ipynb  test_plot_mesh_1d_firedrake.ipynb  test_plot_mesh_2d_dolfinx.ipynb  test_plot_mesh_2d_firedrake.ipynb  test_plot_mesh_3d_dolfinx.ipynb  test_plot_mesh_3d_firedrake.ipynb  test_plot_scalar_field_1d_dolfinx.ipynb  test_plot_scalar_field_1d_firedrake.ipynb  test_plot_scalar_field_2d_dolfinx.ipynb  test_plot_scalar_field_2d_firedrake.ipynb  test_plot_scalar_field_3d_dolfinx.ipynb  test_plot_scalar_field_3d_firedrake.ipynb  test_plot_subdomains_1d_dolfinx.ipynb  test_plot_subdomains_1d_firedrake.ipynb  test_plot_subdomains_2d_dolfinx.ipynb  test_plot_subdomains_2d_firedrake.ipynb  test_plot_subdomains_3d_dolfinx.ipynb  test_plot_subdomains_3d_firedrake.ipynb  test_plot_vector_field_2d_dolfinx.ipynb  test_plot_vector_field_2d_firedrake.ipynb  test_plot_vector_field_3d_dolfinx.ipynb  test_plot_vector_field_3d_firedrake.ipynb
tests/unit/: conftest.py  test_add_point_markers.py  test_compute_screen_pixel_size_in_world.py  test_empty.py  test_extract_part.py  test_update_camera_with_mesh.py
tests/unit/utils/dtype/: test_extract_part.py
tests/unit/utils/pyvista/: test_add_point_markers.py  test_compute_screen_pixel_size_in_world.py  test_update_camera_with_mesh.py
tutorials/: .gitignore  conftest.py
tutorials/01_garda/: tutorial_garda_dolfinx.ipynb
tutorials/01_introduction/: common_01_dolfinx.py  common_01_firedrake.py  common_dolfinx.py  common_firedrake.py  tutorial_introduction_dolfinx.ipynb  tutorial_introduction_firedrake.ipynb  tutorial_introduction_firedrake_netgen.ipynb  tutorial_plot_boundaries_1d_dolfinx.ipynb  tutorial_plot_boundaries_1d_firedrake.ipynb  tutorial_plot_boundaries_2d_dolfinx.ipynb  tutorial_plot_boundaries_2d_firedrake.ipynb  tutorial_plot_boundaries_3d_dolfinx.ipynb  tutorial_plot_boundaries_3d_firedrake.ipynb  tutorial_plot_mesh_1d_dolfinx.ipynb  tutorial_plot_mesh_1d_firedrake.ipynb  tutorial_plot_mesh_2d_dolfinx.ipynb  tutorial_plot_mesh_2d_firedrake.ipynb  tutorial_plot_mesh_3d_dolfinx.ipynb  tutorial_plot_mesh_3d_firedrake.ipynb  tutorial_plot_scalar_field_1d_dolfinx.ipynb  tutorial_plot_scalar_field_1d_firedrake.ipynb  tutorial_plot_scalar_field_2d_dolfinx.ipynb  tutorial_plot_scalar_field_2d_firedrake.ipynb  tutorial_plot_scalar_field_3d_dolfinx.ipynb  tutorial_plot_scalar_field_3d_firedrake.ipynb  tutorial_plot_subdomains_1d_dolfinx.ipynb  tutorial_plot_subdomains_1d_firedrake.ipynb  tutorial_plot_subdomains_2d_dolfinx.ipynb  tutorial_plot_subdomains_2d_firedrake.ipynb  tutorial_plot_subdomains_3d_dolfinx.ipynb  tutorial_plot_subdomains_3d_firedrake.ipynb  tutorial_plot_vector_field_2d_dolfinx.ipynb  tutorial_plot_vector_field_2d_firedrake.ipynb  tutorial_plot_vector_field_3d_dolfinx.ipynb  tutorial_plot_vector_field_3d_firedrake.ipynb
tutorials/02_garda/: tutorial_garda_dolfinx.ipynb  tutorial_garda_firedrake.ipynb
tutorials/03_high_order_meshes/: common_03_dolfinx.py  common_03_none.py  tutorial_high_order_meshes_1d_dolfinx.ipynb  tutorial_high_order_meshes_2d_dolfinx.ipynb  tutorial_high_order_meshes_3d_dolfinx.ipynb
tutorials/04_plotting_options/: tutorial_parallel_dolfinx.ipynb  tutorial_plain_py_files_dolfinx.ipynb  tutorial_plain_py_files_firedrake.ipynb  tutorial_pyvista_backend_dolfinx.ipynb  tutorial_pyvista_backend_firedrake.ipynb  tutorial_pyvista_subplots_dolfinx.ipynb  tutorial_pyvista_subplots_firedrake.ipynb
tutorials/04_runtime_options/: tutorial_parallel_firedrake.ipynb  tutorial_plain_py_files_dolfinx.ipynb  tutorial_pyvista_plotter_kwargs_dolfinx.ipynb  tutorial_pyvista_plotter_kwargs_firedrake.ipynb
viskex/: __init__.py  base_converter.py  base_plotter.py  dolfinx.py  dolfinx_converter.py  dolfinx_plotter.py  firedrake.py  firedrake_converter.py  firedrake_plotter.py  free_functions.py  plotly_plotter.py  pyvista_converter.py  pyvista_plotter.py
viskex/utils/: __init__.py  add_point_markers.py  compute_screen_pixel_size_in_world.py  extract_part.py  scalar_type.py  values_in.py
viskex/utils/dtype/: __init__.py  extract_part.py  real_type.py  scalar_type.py
viskex/utils/pyvista/: __init__.py  add_point_markers.py  compute_screen_pixel_size_in_world.py  update_camera_with_mesh.py  values_in.py
