[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viskex"
version = "0.1.0.post0"
authors = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"},
]
maintainers = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"},
]
description = "Interactive visualization for firedrake and FEniCSx"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy",
    "packaging",
    "pyvista[jupyter]"
]

[project.urls]
homepage = "https://viskex.github.io"
repository = "https://github.com/viskex/viskex"
issues = "https://github.com/viskex/viskex/issues"
funding = "https://github.com/sponsors/francesco-ballarin"

[project.optional-dependencies]
backend_dolfinx = [
    "fenics-dolfinx >= 0.8.0"
]
backend_firedrake = [
    "firedrake >= 2025.4.0"
]
docs = [
    "sphinx"
]
lint = [
    "isort",
    "mypy",
    "nbqa",
    "ruff",
    "yamllint"
]
tests = [
    "coverage[toml]",
    "nbvalx[unit-tests]",
    "pytest"
]
tutorials = [
    # "fenics-dolfinx",
    # "firedrake",
    "nbvalx[notebooks]"
]

[tool.coverage.paths]
source = ["viskex", "*/dist-packages/viskex", "*/site-packages/viskex"]

[tool.isort]
line_length = 120
multi_line_output = 4
order_by_type = false

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    # "dolfinx",
    # "dolfinx.*",
    "firedrake",
    "firedrake.*",
    "google",
    "google.colab",
    "ipyparallel",
    # "petsc4py",
    # "petsc4py.PETSc",
    "ufl"
]
ignore_missing_imports = true

[tool.pytest.ini_options]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "FLY", "ICN", "N", "NPY", "Q", "RUF", "UP", "W"]
ignore = []
exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"viskex/__init__.py" = ["F401"]
"viskex/**/__init__.py" = ["F401"]
"tutorials/**/tutorial_*.py" = ["D100"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.package-data]
viskex = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
