[metadata]
name = viskex
version = 0.0.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Interactive visualization for firedrake and FEniCSx
url = https://github.com/viskex/viskex
project_urls =
    Homepage = https://github.com/viskex/viskex
    Issues = https://github.com/viskex/viskex/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.6
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    ipywidgets
    kaleido
    numpy
    panel
    plotly
    plum-dispatch
    pyvista
    trame
    trame-vtk

[options.extras_require]
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions
    flake8-isort
    flake8-quotes
tests =
    nbqa
    nbvalx[unit_tests] @ git+https://github.com/multiphenics/nbvalx.git
    pytest
    pytest-cov
tutorials =
    # fenics-dolfinx
    # firedrake
    nbvalx[notebooks] @ git+https://github.com/multiphenics/nbvalx.git

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
i2041_exclude = viskex, viskex.*
i2045_include = *
i2045_exclude = viskex, viskex.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    viskex/__init__.py: F401
    viskex/**/__init__.py: F401
    tutorials/**/tutorial_*.py: D100, I004

[isort]
line_length = 120
multi_line_output = 4
order_by_type = False

[coverage:paths]
source =
    viskex
    */dist-packages/viskex
    */site-packages/viskex
